--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
             </div>
         </div>
     </nav>
+    <section id="profile">
+        <div class="section_pic-container">
+            <img src="./images/profile-pic.png" alt="My Profile Picture">
+
+        </div>
+        <div class="section-text">
+            <p class ="section_text_p1">Hello, I'm</p>
+            <h1 class = "title">John Doe</h1>
+            <p class = "section_text_p2">Frontend Developer</p>
+            <div class ='btn-container'>
+                <button class = "btn btn-color-2" onclick="window.open('./images/resume-example.pdf')">Download CV</button>
+                <button class = "btn btn-color-1" onclick="location.href ='./#contacts'">Contact Info</button>
+            </div>
+        </div>
+    </section>
     
     <script src="script.js"></script>
 </body>
