--- a/index.html
+++ b/index.html
@@ -76,13 +76,24 @@
             <div class = "about-details-container">
                 <div class="about-container">
                     <div class="details-container">
-                        <img src="./images/experience.png" alt="experience.png" class="icon"/>
+                        <img src="./images/experience.png" alt="experience icon" class="icon"/>
                         <h3>Experience</h3>
                         <p>2+ Years<br>Frontend Development</p>
                     </div>
+                    <div class="details-container">
+                        <img src="./images/education.png" alt="education icon" class="icon"/>
+                        <h3>Education</h3>
+                        <p>Diploma in Immersive Media<br> O-Levels</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam sit aut consectetur, cum repellendus repellat sed magni eius est voluptas quam doloremque ratione laudantium quis. Quidem natus quae ipsum beatae tempore, sunt et saepe dolore obcaecati, adipisci eligendi fuga aperiam quasi amet cupiditate consequuntur architecto, maxime nulla ducimus inventore? Saepe?</p>
                 </div>
             </div>
         </div>
+        <img src="./images/arrow.png" alt="Arrow icon" class="icon arrow"
+        onclick="location.href='./#experience'"/>
+    
     </section>
 
     <script src="script.js"></script>
