--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         
     </section>
 
-    <section id = "Certifications">
+    <section id = "certifications">
         <p class="section_text_p1">View My</p>
         <h1 class = "title">Certifications</h1>
         <div class="gallery">
