--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <img src ="./images/checkmark.png" alt="experience icon" class="icon">
                             <div>
                                 <h3>HTML</h3>
-                                <p>Experienced</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
