--- a/Project-One.html
+++ b/Project-One.html
@@ -493,13 +493,19 @@
               Unity
             </div>
             <div class="software-item">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Visual_Studio_Code_1.35_icon.svg"
+              <img src="/logos/programlang.png"
                 alt="VS Code Logo">
-              Visual Studio Code
+              C#
             </div>
             <div class="software-item">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Figma-logo.svg" alt="Figma Logo">
-              Figma
+              <img src="/logos/maya.png" alt="Figma Logo">
+              Maya
+              
+            </div>
+            <div class="software-item">
+              <img src="/logos/substance painter.png" alt="Figma Logo">
+              Substance Painter
+              
             </div>
           </div>
 
@@ -584,7 +590,7 @@
           const closeImageBtn = document.getElementById('close-image-lightbox');
           const imageContainer = document.getElementById('image-container');
 
-
+          // MUST edit images here as well
           const images = [
             "https://images.unsplash.com/photo-1466853817435-05b43fe45b39?auto=format&fit=crop&w=2198&q=80",
             "https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=2370&q=80",
