--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="section_text">
             <p class="section_text_p1">Hello, I'm</p>
             <h1 class="title">Coleman Lim</h1>
-            <p class="section_text_p2">Frontend Developer</p>
+            <p class="section_text_p2">Game Developer & 3D Modeler</p>
             <div class='btn-container'>
                 <button class="btn btn-color-2" onclick="window.open('./images/resume-example.pdf')">Download
                     CV</button>
@@ -83,7 +83,7 @@
                     <div class="details-container">
                         <img src="./images/experience.png" alt="experience icon" class="icon"/>
                         <h3>Experience</h3>
-                        <p>2+ Years<br>Frontend Development</p>
+                        <p>2+ Years<br>IT Development</p>
                     </div>
                     <div class="details-container">
                         <img src="./images/education.png" alt="education icon" class="icon"/>
