--- a/Project-One.html
+++ b/Project-One.html
@@ -626,13 +626,17 @@
                     // Use local images (relative to your project)
                     const images = [
                         "images/dark-astronaut.png",
-                        "images/spaceship-modular.png"
+                        "images/spaceship-modular.png",
+                        "images/spaceship-corridor.png",
+                        "images/spaceship-mainroom.png",
                         
                     ];
 
                     const descriptions = [
                         "Dark Astronaut taken from SketchFab as player character (Credit-Charles Cloutier)",
-                        "Spaceship Modular Assets (Work in Progress) in Maya"
+                        "Spaceship Modular Assets (Work in Progress) in Maya",
+                        "Final Corridor Unity Render",
+                        "Final Main Room Unity Render"
                         
                     ];
 
