--- a/Project-Two.html
+++ b/Project-Two.html
@@ -640,7 +640,7 @@
                         "Sketch of my character (Grey-Scale)",
                         "Character model in Maya.",
                         "Armour texturing in Substance Painter.",
-                        "Female head painting in Substance Painter."
+                        "Head painting in Substance Painter."
                     ];
 
                     let currentIndex = 0;
